--- a/src/FileNameDialog.xaml
+++ b/src/FileNameDialog.xaml
@@ -3,8 +3,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:CleanArchitecture.CodeGenerator"
         xmlns:av="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="av" x:Class="CleanArchitecture.CodeGenerator.FileNameDialog"
-        Title="Generate application features code" Height="400" Width="400" ResizeMode="NoResize" ShowInTaskbar="False" WindowStartupLocation="CenterScreen" SizeToContent="Width"
-        DataContext="{Binding RelativeSource={RelativeSource Self}}"
+        Title="Risk project CQRS file generator" Height="400" Width="400" ResizeMode="NoResize" ShowInTaskbar="False" WindowStartupLocation="CenterScreen" SizeToContent="Width"
+        DataContext="{Binding RelativeSource={RelativeSource Self}}" Icon="/CleanArchitectureCodeGenerator;component/context-icon.png"
         >
 
     <Grid>
